[tool.poetry]
name = "example-python-app"
version = "0.1.0"
description = ""
authors = ["Ben McDonald <ben@mebmc.uk>"]
packages = [
    { include = "example", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
example = 'example.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
